# psychologia-wam

./: .gitignore  pyproject.toml
django_app/main_app/: Dockerfile  docker-compose.yml  pyproject.toml
django_app/main_app/articles/: admin.py  forms.py  models.py  urls.py  views.py
django_app/main_app/articles/static/css/: footer.css  logo.css  navigation.css  style.css
django_app/main_app/articles/static/javascript/: menu.js
django_app/main_app/articles/templates/: article_base.html  articles_list.html  base.html  dictionary_view.html  footer.html  footpage.html  main_page.html  menu.html  my-data.html  navigation.html  new_article.html  sign-in.html  sign-up.html
django_app/main_app/main_app/: settings.py  urls.py
django_app/main_app/main_app/templates/: fullcalendar.html
django_app/main_app/src/: const.py
django_app/main_app/src/helper_function/: pagination.py  prepare_artickle_preview.py  text_cleaners.py
