[tool.poetry]
name = "psychologia-wam"
version = "0.1.0"
description = ""
authors = ["katarzynamariaelzbieta <kasia.gajc@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
black = "^24.3.0"
isort = "^5.13.2"
psycopg2-binary = "^2.9.9"
django-bootstrap-form = "^3.4"
django-crispy-forms = "^2.1"
django-summernote = "^0.8.20"
python-dateutil = "^2.9.0"
wagtail-modeladmin = "^2.0.0"
django-scheduler = "^0.10.1"
django-bower = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

